--- a/Views/Data/Import.cshtml
+++ b/Views/Data/Import.cshtml
@@ -21,8 +21,8 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="excelFile" class="form-label">Выберите Excel-файл (.xlsx):</label>
-                            @* <input type="file" name="excelFile" id="excelFile" class="form-control" accept=".xlsx" required /> *@
+                            <label for="excelFiles" class="form-label">Выберите Excel-файлы (.xlsx):</label>
+                            <input type="file" name="excelFiles" id="excelFiles" class="form-control" accept=".xlsx" required multiple />
                             <div class="form-text">Пожалуйста, убедитесь, что данные соответствуют ожидаемому формату.</div>
                         </div>
 
